==> T0n0T/nrfx/services/at/src/at_client.c <==
#include <at.h>
#define NRF_LOG_MODULE_NAME atclient
#define NRF_LOG_LEVEL       NRF_LOG_SEVERITY_DEBUG
#include "nrf_log.h"
#define AT_RESP_END_OK    "OK"
#define AT_RESP_END_ERROR "ERROR"
#define AT_RESP_END_FAIL  "FAIL"
#define AT_END_CR_LF      "\r\n"

at_response_t at_resp_set_info(at_response_t resp, size_t buf_size, size_t line_num, int32_t timeout)
{
    char* p_temp;
    ASSERT(resp);

    if (resp->buf_size != buf_size) {
        resp->buf_size = buf_size;

        p_temp = (char*)realloc(resp->buf, buf_size);
        if (p_temp == NULL) {
            NRF_LOG_DEBUG("No memory for realloc response buffer size(%d).", buf_size);
            return NULL;
        } else {
            resp->buf = p_temp;
        }
    }

    resp->line_num = line_num;
    resp->timeout  = timeout;

    return resp;
}

const char* at_resp_get_line(at_response_t resp, size_t resp_line)
{
    char*  resp_buf      = resp->buf;
    char*  resp_line_buf = NULL;
    size_t line_num      = 1;

    ASSERT(resp);

    if (resp_line > resp->line_counts || resp_line <= 0) {
        NRF_LOG_ERROR("AT response get line failed! Input response line(%d) error!", resp_line);
        return NULL;
    }

    for (line_num = 1; line_num <= resp->line_counts; line_num++) {
        if (resp_line == line_num) {
            resp_line_buf = resp_buf;

            return resp_line_buf;
        }

        resp_buf += strlen(resp_buf) + 1;
    }

    return NULL;
}

int at_obj_exec_cmd(at_client_t client, at_response_t resp, const char* cmd_expr, ...)
{
    va_list     args;
    size_t      cmd_size = 0;
    uint32_t    result   = EOK;
    const char* cmd      = NULL;

    ASSERT(cmd_expr);

    if (client == NULL) {
        NRF_LOG_ERROR("input AT Client object is NULL, please create or get AT Client object!");
        return -ERROR;
    }

    /* check AT CLI mode */
    if (client->status == AT_STATUS_CLI && resp) {
        return -EBUSY;
    }

    xSemaphoreTake(client->lock, portMAX_DELAY);

    client->resp_status = AT_RESP_OK;

    if (resp != NULL) {
        resp->buf_len     = 0;
        resp->line_counts = 0;
    }

    client->resp = resp;

    /* clear the receive buffer */
    xQueueReset(client->rx_queue);

    /* clear the current received one line data buffer, Ignore dirty data before transmission */
    memset(client->recv_line_buf, 0x00, client->recv_line_len);
    client->recv_line_len = 0;

    va_start(args, cmd_expr);
    at_vprintfln(client->device, cmd_expr, args);
    va_end(args);

    if (resp != NULL) {
        if (xSemaphoreTake(client->resp_notice, pdMS_TO_TICKS(resp->timeout)) != pdTRUE) {
            cmd = at_get_last_cmd(&cmd_size);
            NRF_LOG_WARNING("execute command (%*.s) timeout (%d ticks)!", cmd_size - 2, cmd, resp->timeout);
            //reset overflow error
            nrf_uart_disable(NRF_UART0);
            nrf_uart_enable(NRF_UART0);
            client->resp_status = AT_RESP_TIMEOUT;
            result              = -ETIMEOUT;
            goto __exit;
        }
        if (client->resp_status != AT_RESP_OK) {
            cmd = at_get_last_cmd(&cmd_size);
            NRF_LOG_ERROR("execute command (%*.s) failed!", cmd_size - 2, cmd);
            result = -ERROR;
            goto __exit;
        }
    }

__exit:
    client->resp = NULL;

    xSemaphoreGive(client->lock);

    return result;
}

int at_client_obj_wait_connect(at_client_t client, uint32_t timeout)
{
    uint32_t      result     = EOK;
    at_response_t resp       = NULL;
    uint32_t      start_time = 0;

    if (client == NULL) {
        NRF_LOG_ERROR("input AT client object is NULL, please create or get AT Client object!");
        return -ERROR;
    }

    resp = at_create_resp(64, 0, 300);
    if (resp == NULL) {
        NRF_LOG_ERROR("no memory for AT client(%s) response object.");
        return -ENOMEM;
    }

    xSemaphoreTake(client->lock, portMAX_DELAY);
    client->resp = resp;

    start_time = xTaskGetTickCount();
    while (1) {
        /* Check whether it is timeout */
        if (xTaskGetTickCount() - start_time > pdMS_TO_TICKS(timeout)) {
            NRF_LOG_ERROR("wait AT client connect timeout(%d tick).", timeout);
            result = -ETIMEOUT;
            break;
        }

        /* Check whether it is already connected */
        resp->buf_len     = 0;
        resp->line_counts = 0;
        at_utils_send(client->device, 0, "AT\r\n", 4);

        if (xSemaphoreTake(client->resp_notice, pdMS_TO_TICKS(resp->timeout)) != pdTRUE)
            continue;
        else
            break;
    }

    at_delete_resp(resp);

    client->resp = NULL;

    xSemaphoreGive(client->lock);

    return result;
}

size_t at_client_obj_send(at_client_t client, const char* buf, size_t size)
{
    size_t len;

    ASSERT(buf);

    if (client == NULL) {
        NRF_LOG_ERROR("input AT Client object is NULL, please create or get AT Client object!");
        return 0;
    }

#ifdef AT_PRINT_RAW_CMD
    at_print_raw_cmd("sendline", buf, size);
#endif

    xSemaphoreTake(client->lock, portMAX_DELAY);
    len = at_utils_send(client->device, 0, buf, size);
    xSemaphoreGive(client->lock);

    return len;
}

static uint32_t at_client_getchar(at_client_t client, char* ch, TickType_t timeout)
{
    xQueueReceive(client->rx_queue, ch, timeout);
    return EOK;
}

size_t at_client_obj_recv(at_client_t client, char* buf, size_t size, int32_t timeout)
{
    char ch;
    int  read_idx = 0;

    ASSERT(buf);

    if (client == NULL) {
        NRF_LOG_ERROR("input AT Client object is NULL, please create or get AT Client object!");
        return 0;
    }

    while (1) {
        if (read_idx < size) {
            uint32_t result = at_client_getchar(client, &ch, pdMS_TO_TICKS(timeout));
            if (result != EOK) {
                NRF_LOG_ERROR("AT Client receive failed, uart device get data error(%d)", result);
                return 0;
            }
            buf[read_idx++] = ch;
        } else {
            break;
        }
    }

#ifdef AT_PRINT_RAW_CMD
    at_print_raw_cmd("urc_recv", buf, read_idx);
#endif

    return read_idx;
}

int at_obj_set_urc_table(at_client_t client, const struct at_urc* urc_table, size_t table_sz)
{
    size_t idx;

    if (client == NULL) {
        NRF_LOG_ERROR("input AT Client object is NULL, please create or get AT Client object!");
        return -ERROR;
    }

    for (idx = 0; idx < table_sz; idx++) {
        ASSERT(urc_table[idx].cmd_prefix);
        ASSERT(urc_table[idx].cmd_suffix);
    }

    if (client->urc_table_size == 0) {
        client->urc_table = (struct at_urc_table*)calloc(1, sizeof(struct at_urc_table));
        if (client->urc_table == NULL) {
            return -ENOMEM;
        }

        client->urc_table[0].urc      = urc_table;
        client->urc_table[0].urc_size = table_sz;
        client->urc_table_size++;
    } else {
        struct at_urc_table* new_urc_table = NULL;

        /* realloc urc table space */
        new_urc_table = (struct at_urc_table*)realloc(client->urc_table, client->urc_table_size * sizeof(struct at_urc_table) + sizeof(struct at_urc_table));
        if (new_urc_table == NULL) {
            return -ENOMEM;
        }
        client->urc_table                                  = new_urc_table;
        client->urc_table[client->urc_table_size].urc      = urc_table;
        client->urc_table[client->urc_table_size].urc_size = table_sz;
        client->urc_table_size++;
    }

    return EOK;
}

static int at_recv_readline(at_client_t client)
{
    size_t read_len = 0;
    char   ch = 0, last_ch = 0;
    bool   is_full = 0;

    memset(client->recv_line_buf, 0x00, client->recv_bufsz);
    client->recv_line_len = 0;

    while (1) {
        at_client_getchar(client, &ch, portMAX_DELAY);

        if (read_len < client->recv_bufsz) {
            client->recv_line_buf[read_len++] = ch;
            client->recv_line_len             = read_len;
            // NRF_LOG_RAW_INFO("%c\n", ch);
        } else {
            is_full = 1;
        }

        /* is newline or URC data */
        if ((ch == '\n' && last_ch == '\r') || (client->end_sign != 0 && ch == client->end_sign) || get_urc_obj(client)) {
            if (is_full) {
                NRF_LOG_ERROR("read line failed. The line data length is out of buffer size(%d)!", client->recv_bufsz);
                memset(client->recv_line_buf, 0x00, client->recv_bufsz);
                client->recv_line_len = 0;
                return -EFULL;
            }
            break;
        }
        last_ch = ch;
    }

#ifdef AT_PRINT_RAW_CMD
    at_print_raw_cmd("recvline", client->recv_line_buf, read_len);
#endif

    return read_len;
}

static void client_parser(at_client_t client)
{
    const struct at_urc* urc;

    while (1) {
        if (at_recv_readline(client) > 0) {
            if ((urc = get_urc_obj(client)) != NULL) {
                /* current receive is request, try to execute related operations */
                if (urc->func != NULL) {
                    urc->func(client, client->recv_line_buf, client->recv_line_len);
                }
            } else if (client->resp != NULL) {
                at_response_t resp = client->resp;

                char end_ch = client->recv_line_buf[client->recv_line_len - 1];

                /* current receive is response */
                client->recv_line_buf[client->recv_line_len - 1] = '\0';
                if (resp->buf_len + client->recv_line_len < resp->buf_size) {
                    /* copy response lines, separated by '\0' */
                    memcpy(resp->buf + resp->buf_len, client->recv_line_buf, client->recv_line_len);

                    /* update the current response information */
                    resp->buf_len += client->recv_line_len;
                    resp->line_counts++;
                } else {
                    client->resp_status = AT_RESP_BUFF_FULL;
                    NRF_LOG_ERROR("Read response buffer failed. The Response buffer size is out of buffer size(%d)!", resp->buf_size);
                }
                /* check response result */
                if ((client->end_sign != 0) && (end_ch == client->end_sign) && (resp->line_num == 0)) {
                    /* get the end sign, return response state END_OK.*/
                    client->resp_status = AT_RESP_OK;
                } else if (memcmp(client->recv_line_buf, AT_RESP_END_OK, strlen(AT_RESP_END_OK)) == 0 && resp->line_num == 0) {
                    /* get the end data by response result, return response state END_OK. */
                    client->resp_status = AT_RESP_OK;
                } else if (strstr(client->recv_line_buf, AT_RESP_END_ERROR) || (memcmp(client->recv_line_buf, AT_RESP_END_FAIL, strlen(AT_RESP_END_FAIL)) == 0)) {
                    client->resp_status = AT_RESP_ERROR;
                } else if (resp->line_counts == resp->line_num && resp->line_num) {
                    /* get the end data by response line, return response state END_OK.*/
                    client->resp_status = AT_RESP_OK;
                } else {
                    continue;
                }

                client->resp = NULL;

                xSemaphoreGive(client->resp_notice);
            } else {
                // NRF_LOG_DEBUG("unrecognized line: %*.s", client->recv_line_len, client->recv_line_buf);
            }
        }
    }
}

static void at_client_rx_ind(nrfx_uart_event_t const* p_event, void* p_context)
{
    at_client_t client = (at_client_t)p_context;
    if (p_event->type == NRFX_UART_EVT_RX_DONE) {
        BaseType_t xHigherPriorityTaskWoken = pdFALSE;
        nrfx_uart_rx(client->device, &rx_ch, 1);
        // NRF_LOG_RAW_INFO("%c", rx_ch);
        xQueueSendFromISR(client->rx_queue, &rx_ch, &xHigherPriorityTaskWoken);
        portYIELD_FROM_ISR(xHigherPriorityTaskWoken);
    }
    if (p_event->type == NRFX_UART_EVT_TX_DONE) {
        transfer_status = true;
    }
    if (p_event->type == NRFX_UART_EVT_ERROR) {
        NRF_LOG_ERROR("NRFX_UART_EVT_ERROR[%d], when %d bytes",
                      p_event->data.error.error_mask,
                      p_event->data.error.rxtx.bytes);
        nrfx_uart_rx(client->device, &rx_ch, 1);
    }
}

static int at_client_para_init(at_client_t client)
{
#define AT_CLIENT_LOCK_NAME   "at_c"
#define AT_CLIENT_SEM_NAME    "at_cs"
#define AT_CLIENT_RESP_NAME   "at_cr"
#define AT_CLIENT_THREAD_NAME "at_clnt"

    int        result        = EOK;
    static int at_client_num = 0;
    char       name[NAME_MAX];

    client->status = AT_STATUS_UNINITIALIZED;

    client->recv_line_len = 0;
    client->recv_line_buf = (char*)calloc(1, client->recv_bufsz);
    if (client->recv_line_buf == NULL) {
        NRF_LOG_ERROR("AT client initialize failed! No memory for receive buffer.");
        result = -ENOMEM;
        goto __exit;
    }

    client->rx_queue = xQueueCreate(64, sizeof(char*));
    if (client->rx_queue == NULL) {
        NRF_LOG_ERROR("AT client initialize failed! at_client_rx_queue create failed!");
        result = -ENOMEM;
        goto __exit;
    }

    client->lock = xSemaphoreCreateMutex();
    if (client->lock == NULL) {
        NRF_LOG_ERROR("AT client initialize failed! at_client_recv_lock create failed!");
        result = -ENOMEM;
        goto __exit;
    }

    client->resp_notice = xSemaphoreCreateCounting(UINT_FAST16_MAX, 0);
    if (client->resp_notice == NULL) {
        NRF_LOG_ERROR("AT client initialize failed! at_client_resp semaphore create failed!");
        result = -ENOMEM;
        goto __exit;
    }

    client->urc_table      = NULL;
    client->urc_table_size = 0;

    snprintf(name, NAME_MAX, "%s%d", AT_CLIENT_THREAD_NAME, at_client_num);
    xTaskCreate((void (*)(void* parameter))client_parser,
                name,
                512,
                client,
                configMAX_PRIORITIES - 2,
                client->parser);

__exit:
    if (result != EOK) {
        if (client->lock) {
            vSemaphoreDelete(client->lock);
        }

        if (client->rx_queue) {
            vQueueDelete(client->rx_queue);
        }

        if (client->resp_notice) {
            vSemaphoreDelete(client->resp_notice);
        }

        if (client->device) {
            nrfx_uart_uninit(client->device);
        }

        if (client->recv_line_buf) {
            free(client->recv_line_buf);
        }

        memset(client, 0x00, sizeof(struct at_client));
    } else {
        at_client_num++;
    }

    return result;
}

int at_client_init(const char* dev_name, size_t recv_bufsz)
{
    int         idx      = 0;
    int         result   = EOK;
    uint32_t    err_code = NRF_SUCCESS;
    at_client_t client   = NULL;

    ASSERT(recv_bufsz > 0);

    client             = &at_client_table[idx];
    client->recv_bufsz = recv_bufsz;

    result = at_client_para_init(client);
    if (result != EOK) {
        NRF_LOG_ERROR("AT client initialize para failed(%d).", result);
        goto __exit;
    }

    /* find and open command device */

    config.pseltxd   = UART_PIN_TX;
    config.pselrxd   = UART_PIN_RX;
    config.p_context = (void*)client;

    client->device = &p_instance;
    client->cfg    = &config;

    err_code = nrfx_uart_init(client->device, client->cfg, at_client_rx_ind);
    nrfx_uart_rx(client->device, &rx_ch, 1);
    if (err_code != NRF_SUCCESS) {
        NRF_LOG_ERROR("AT client initialize uart failed(%d).", err_code);
        goto __exit;
    }

__exit:
    if (result == EOK) {
        client->status = AT_STATUS_INITIALIZED;

        vTaskResume(client->parser);

        NRF_LOG_INFO("AT client(V%s) on device %s initialize success.", AT_SW_VERSION, dev_name);
    } else {
        NRF_LOG_ERROR("AT client(V%s) on device %s initialize failed(%d).", AT_SW_VERSION, dev_name, result);
    }

    return result;
}
